# themion

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  package.json  tsconfig.json
crates/themion-cli/: Cargo.toml  build.rs
crates/themion-cli-web-ui/: Cargo.toml
crates/themion-cli-web-ui/assets/: app.css  index.html
crates/themion-cli-web-ui/src/: lib.rs
crates/themion-cli/src/: app_runtime.rs  app_state.rs  auth_store.rs  board_runtime.rs  build_info.rs  chat_composer.rs  config.rs  headless_runner.rs  instance_id.rs  local_prompts.rs  login_codex.rs  main.rs  paste_burst.rs  runtime_domains.rs  source_analysis.rs  stylos.rs  surface_runner.rs  textarea.rs  tui.rs  tui_runner.rs  web.rs  web_assets.rs  web_terminal.rs
crates/themion-cli/web-assets/: app.css  themion_cli_web_ui.d.ts  themion_cli_web_ui.js  themion_cli_web_ui_bg.wasm  themion_cli_web_ui_bg.wasm.d.ts
crates/themion-core/: Cargo.toml
crates/themion-core/src/: agent.rs  agents_md.rs  auth.rs  client.rs  client_codex.rs  codex_cli_instruction.rs  context_report.rs  db.rs  lib.rs  memory.rs  predefined_guardrails.rs  tools.rs  workflow.rs
crates/themion-core/tests/: memory_tools.rs
crates/themion-web/: Cargo.toml  README.md
crates/themion-web/src/: agent_runtime.rs  main.rs  terminal_runtime.rs  web_socket.rs
crates/themion-web/src/components/ui/: badge.rs  button.rs  card.rs
crates/themion-web/style/: app.css  app.js  tailwind.css
docs/: README.md  architecture.md  codex-integration-guide.md  core-ai-engine-loop.md  engine-runtime.md  prd-self-note-guidance.md  quota-rate-limit-extraction.md  system-prompt-research.md  tool-design-and-implementation-guide.md  tui-app-state-refactor-checklist.md
docs/prd/: PRD_AUTHORING_GUIDE.md  README.md  prd-001-config-and-repl-feedback.md  prd-002-persistent-history-multi-agent.md  prd-003-openai-codex-provider.md  prd-004-direct-shell-command-prefix.md  prd-005-model-context-window-refresh-and-statusline.md  prd-006-workflow-and-phase-model-for-harness-engine.md  prd-007-lite-workflow-activation-and-runtime-structure.md  prd-008-workflow-phase-retry-and-recovery-policy.md  prd-009-domain-prefixed-tool-naming-convention.md  prd-010-rename-database-file-to-system-db.md  prd-012-human-friendly-statusline-token-units.md  prd-013-minimal-karpathy-inspired-system-prompt-guardrails.md  prd-014-codex-cli-web-search-instruction-injection.md  prd-015-user-feedback-required-phase-result.md  prd-016-commit-when-asked-brief-summary-guardrail.md  prd-017-press-esc-to-interrupt-agent.md  prd-019-basic-stylos-support-in-themion-cli.md  prd-022-stylos-queryables-for-agent-presence-availability-and-task-requests.md  prd-023-use-external-stylos-repository-instead-of-vendored-workspace-copy.md  prd-024-client-side-git-repo-identity-normalization-for-stylos-agent-git-queries.md  prd-025-long-session-chat-history-navigation.md  prd-026-stylos-talk-sender-identity-and-reply-wiring.md  prd-027-stylos-talk-from-and-to-identifiers.md  prd-029-stylos-notes-board-phase-1.md  prd-030-stylos-notes-table-uuid-and-slug.md  prd-031-rename-local-note-tools-to-board-prefix.md  prd-032-stylos-network-delivered-note-creation.md  prd-033-note-injection-metadata-first-prompting.md  prd-034-note-first-multi-agent-collaboration-and-done-mentions.md  prd-035-blocked-board-column-and-cooldown.md  prd-036-prompt-guidance-for-self-note-creation-beyond-simple-qa.md  prd-037-replace-hard-coded-harness-loop-limit.md  prd-038-center-trim-tool-call-chat-labels.md  prd-039-refactor-board-and-note-naming-toward-local-board-first-semantics.md  prd-044-fix-multiline-input-newline-and-wrapped-cursor-tracking.md  prd-045-project-wide-history-recall-and-search-across-sessions.md  prd-046-lightweight-unified-memory-graph-with-hashtag-based-organization.md  prd-047-prefer-note-slug-in-chat-events.md  (+80 more)
docs/prd/archive/: prd-002-persistent-history-multi-agent.md  prd-004-direct-shell-command-prefix.md  prd-006-workflow-and-phase-model-for-harness-engine.md  prd-007-lite-workflow-activation-and-runtime-structure.md  prd-008-workflow-phase-retry-and-recovery-policy.md  prd-009-domain-prefixed-tool-naming-convention.md  prd-011-softer-more-verbose-harness-status-events.md  prd-015-user-feedback-required-phase-result.md  prd-018-stronger-short-commit-message-guardrail.md  prd-019-basic-stylos-support-in-themion-cli.md  prd-020-stylos-git-metadata-cache-and-remote-url-simplification.md  prd-021-single-process-multi-agent-runtime-and-stylos-reporting.md  prd-028-receiver-side-stylos-talk-logging-should-not-duplicate-hear-and-talk.md  prd-029-stylos-notes-board-phase-1.md  prd-030-stylos-notes-table-uuid-and-slug.md  prd-035-blocked-board-column-and-cooldown.md  prd-036-prompt-guidance-for-self-note-creation-beyond-simple-qa.md  prd-040-debug-command-for-themion-process-thread-task-utilization.md  prd-041-fix-debug-runtime-recent-window-reporting.md  prd-042-dirty-region-and-partial-tui-redraws.md  prd-043-safer-and-more-bounded-file-and-shell-tool-parameters.md  prd-048-remove-navigation-shortcut-hints-from-statusline.md  prd-049-project-memory-and-global-knowledge-naming.md  prd-050-reorganize-tokio-runtime-pools.md
docs/prd/phase1/: README.md
experiments/: stylos-local-agent-board-targeting-bug-log.md  tui-architecture-audit-checklist.md  tui-architecture-violation-cleanup-checklist.md
experiments/prd059/: phase1_spike.rs
experiments/prd059/fixtures/: prd-059-semantic-search-corpus.json
experiments/prd072/: README_fs_write_chunk_probe.md  fs_write_chunk_probe.py  replay_responses_tool_variants.py  tool_schema_hypothesis_test.py  tool_schema_token_check.rs
scripts/: build_web_assets.sh  bump_version.py
src/: agent.rs  config.ts  context.ts  guard.ts  index.tsx  llm.ts  loop.ts  main.rs  parse-fallback.ts  registry.ts  tools.rs
src/tools/: escalate.ts  list-files.ts  read-file.ts  shell.ts  tmux.ts  write-file.ts
src/ui/: App.tsx  InputPrompt.tsx  MessageList.tsx  ToolStatus.tsx
web/: README.md  package.json
