[workspace]
members = [
    "crates/themion-core",
    "crates/themion-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
tokio-stream = "0.1"

[profile.dev]
debug = false
incremental = true

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
