[package]
name = "themion-cli"
version = "0.23.1"
edition = "2021"

[[bin]]
name = "themion"
path = "src/main.rs"

[features]
default = []
stylos = [
    "dep:stylos",
    "dep:hostname",
    "dep:chrono",
    "dep:tokio-util",
    "dep:zenoh",
    "dep:serde_cbor",
]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
dirs = "5"
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
themion-core = { path = "../themion-core", features = ["stylos"] }
uuid.workspace = true
stylos = { workspace = true, optional = true }
hostname = { version = "0.4", optional = true }
chrono = { version = "0.4", default-features = true, features = ["clock"], optional = true }
tokio-util = { version = "0.7", optional = true }
zenoh = { workspace = true, optional = true }
serde_cbor = { version = "0.11", optional = true }
