[package]
name = "themion-cli"
version = "0.72.1"
edition = "2021"

[[bin]]
name = "themion"
path = "src/main.rs"

[features]
default = ["semantic-memory"]
stylos = [
    "dep:stylos",
    "dep:hostname",
    "dep:chrono",
    "dep:tokio-util",
    "dep:zenoh",
    "dep:serde_cbor",
]
semantic-memory = ["themion-core/semantic-memory"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
dirs = "5"
ratatui.workspace = true
crossterm.workspace = true
unicode-width = "0.2"
tokio.workspace = true
tokio-stream.workspace = true
themion-core = { path = "../themion-core", features = ["stylos"] }
uuid.workspace = true
stylos = { workspace = true, optional = true }
hostname = { version = "0.4", optional = true }
chrono = { version = "0.4", default-features = true, features = ["clock"], optional = true }
tokio-util = { version = "0.7", optional = true }
zenoh = { workspace = true, optional = true }
serde_cbor = { version = "0.11", optional = true }
axum = { version = "0.8", features = ["http1", "ws"] }
portable-pty = "0.9"
futures-util = "0.3"
tree-sitter-language-pack = "1.8.0"
