[package]
name = "themion-core"
version = "0.45.0"
edition = "2021"

[features]
default = []
stylos = []
semantic-memory = ["dep:fastembed"]

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
base64.workspace = true
urlencoding.workspace = true
tokio.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono = { version = "0.4", default-features = true, features = ["clock"] }
fastembed = { workspace = true, optional = true }
